Revert "Fix font-sizes, line-heights and spacing issues for columns block" (#242)

--- a/blocks/columns/columns.css
+++ b/blocks/columns/columns.css
@@ -172,26 +172,13 @@
 
 /* Column alignment - End */
 
-.columns.columns.columns-2-cols > div > div {
-  margin-bottom:var(--regular);
-}
-
-.columns.columns-2-cols > div h2 {
-  font-size:var(--h2-base);
-  line-height: 112%;
-  text-transform: uppercase;
+.columns h2 {
   font-weight: 400;
-  margin:0
+  text-transform: uppercase;
 }
 
-.columns.columns-2-cols > div h2 > strong {
+.columns h2 strong {
   font-weight: 700;
-}
-
-.section .columns.columns-2-cols > div > div > p {
-  font-size:var(--body-large);
-  line-height: 125%;
-  margin:0
 }
 
 @media (width >= 1024px) {
